src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Alzheimer%27s Trading Ltd Sales Process</fullName>
        <description>Alzheimer&apos;s Trading Ltd Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Final negotiations</fullName>
        </values>
        <values>
            <fullName>Product discussion</fullName>
        </values>
        <values>
            <fullName>Quote</fullName>
        </values>
        <values>
            <fullName>Quote review</fullName>
        </values>
        <values>
            <fullName>Sales Qualified Lead</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Donations</fullName>
        <description>used to track standard donations</description>
        <isActive>true</isActive>
        <values>
            <fullName>Not Posted</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Grant</fullName>
        <description>used to track grant application process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Grant Awarded</fullName>
        </values>
        <values>
            <fullName>Grant Denied</fullName>
        </values>
        <values>
            <fullName>Grant Prep</fullName>
        </values>
        <values>
            <fullName>Grant Submitted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Major Gift</fullName>
        <description>used to track major gift initiative</description>
        <isActive>true</isActive>
        <values>
            <fullName>Ask - Accepted</fullName>
        </values>
        <values>
            <fullName>Ask - Denied</fullName>
        </values>
        <values>
            <fullName>Ask - Under Review</fullName>
        </values>
        <values>
            <fullName>Engaged with Organization</fullName>
        </values>
        <values>
            <fullName>Preparation of Ask</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualified Interest</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Master</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Not Posted</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Deadline__c</fullName>
        <label>Application Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Other__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>If &apos;Other&apos; was chosen for Closed Lost Reason, then please fill out this text box with the reason.</inlineHelpText>
        <label>Closed Lost - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Please choose a reason this opportunity was &apos;Closed - Lost&apos;</inlineHelpText>
        <label>Closed Lost - Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Dissatisfied with service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Staff in organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other – open text box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price - budget restrictions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price - considered too expensive</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Product doesn’t meet needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to release sufficent staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used alternative provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used alternative provider - Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used alternative provider - Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Returned__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Please add the date the Contract was returned.</inlineHelpText>
        <label>Contract Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Sent__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Please add the date the Contract was sent</inlineHelpText>
        <label>Contract Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dedication_Acknowledgement_Type__c</fullName>
        <description>Used for NFG integration.</description>
        <label>Dedication Acknowledgement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dedication_Honoree_Name__c</fullName>
        <label>Dedication Honoree Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedication_Personal_Note__c</fullName>
        <label>Dedication Personal Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dedication_Recipient_Address__c</fullName>
        <label>Dedication Recipient Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dedication_Recipient_Email_Address__c</fullName>
        <description>email address for sending dedication acknowledgments to donors&apos; loved ones</description>
        <label>Dedication Recipient Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dedication_Recipient_First_Name__c</fullName>
        <label>Dedication Recipient First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedication_Recipient_Last_Name__c</fullName>
        <label>Dedication Recipient Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedication_Type__c</fullName>
        <description>Used for NFG integration.</description>
        <label>Dedication Type</label>
        <picklist>
            <picklistValues>
                <fullName>in honor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in memory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>on behalf</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detailed_Product_Interest__c</fullName>
        <inlineHelpText>Please use this area to give a little more information about your interest in products or general Alzheimer&apos;s training. (Possibly mapped from a lead if this Opportunity came from a Lead)</inlineHelpText>
        <label>Specific topics you are interested in</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finance_System_ID__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <externalId>true</externalId>
        <inlineHelpText>ID in Alzheimer&apos;s Trading Ltd Finance system that correlates to this Opportunity (Invoice)</inlineHelpText>
        <label>Finance System ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <picklist>
            <picklistValues>
                <fullName>Annual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_Aid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For use in the UK - If the donor is a tax payer they can choose to have the donation Gift Aided so the government releases the amount of income tax that was already paid and gives it to the charity.</description>
        <label>Gift Aid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gift_Aided_Amount__c</fullName>
        <formula>IF( Gift_Aid__c ,  Amount  * 1.28205, Amount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift Aided Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Amount__c</fullName>
        <description>Used for NFG integration.  Amount that was actually granted versus the donated amount which may less due to online processing fees.</description>
        <label>Grant Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Mapped from Lead if Opportunity came from a Lead</inlineHelpText>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Alzheimer&apos;s Society Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition / Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Search Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Sent__c</fullName>
        <inlineHelpText>Please add the date the Invoice was sent</inlineHelpText>
        <label>Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matching_Amount__c</fullName>
        <formula>Amount  *  Matching__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matching Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Matching_Close_Date__c</fullName>
        <label>Matching Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matching_Status__c</fullName>
        <label>Matching Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Posted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Posted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Matching__c</fullName>
        <label>Matching %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Membership_End_Date__c</fullName>
        <formula>(Membership_Length__c*30.416) + Membership_Start_Date__c</formula>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Length__c</fullName>
        <label>Membership Length (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Start_Date__c</fullName>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Please record next steps with dates</inlineHelpText>
        <label>Next Steps</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opp_name_when_created__c</fullName>
        <label>Opp name when created</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>When Finance have invoiced this deal, they have to tick this box</inlineHelpText>
        <label>ZZdelI Order Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Mapped from Lead if Opportunity came from a Lead</inlineHelpText>
        <label>If &apos;Other&apos;</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <description>Altzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Finance department to record the customers PO Number here for reference</inlineHelpText>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash/Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pledge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up relationship for pledge payments</description>
        <label>Pledge</label>
        <referenceTo>Pledges__c</referenceTo>
        <relationshipLabel>Pledge Payments</relationshipLabel>
        <relationshipName>R00N700000022mcHEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Designation__c</fullName>
        <label>Program Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Donation</label>
        <referenceTo>Recurring_Donation__c</referenceTo>
        <relationshipLabel>Donation</relationshipLabel>
        <relationshipName>R00N700000022mc0EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Social Care - East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Care - West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Care - South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_Deadline__c</fullName>
        <label>Reporting Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Requirements__c</fullName>
        <label>Reporting Requirements</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Choose Sector for this Opportunity</inlineHelpText>
        <label>Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Social Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Amount_VAT__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <formula>Amount + (20/100* Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically calculated Amount of Opportunity + VAT</inlineHelpText>
        <label>Total Amount + VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Amount  +  Matching_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training_Allocated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>This box will be ticked when training for this deal has been allocated</inlineHelpText>
        <label>Training Allocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_required_for__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Please choose the best applicable choice for the level of interaction with dementia that customer needs assistance/training with. This field will be on the web to lead form also.</inlineHelpText>
        <label>Training required for:</label>
        <picklist>
            <picklistValues>
                <fullName>All staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member of Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person with Dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior staff and  managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff responsible for the direct care of people with dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff who have occasional contact with people with dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff who work with people with dementia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <formula>(20/100* Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllDonations</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Donations</label>
        <sharedTo>
            <group>BusinessDevelopmentManagers</group>
            <group>BusinessDevelopmentUsers</group>
            <group>Facilities</group>
            <group>Services</group>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>DonationHistory</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Donation History</label>
    </listViews>
    <listViews>
        <fullName>MatchingDonations</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.MatchingDonation</value>
        </filters>
        <label>Matching Donations</label>
        <sharedTo>
            <group>AlzheimersTradingLtdOfficeGroup185171</group>
            <group>BusinessDevelopmentManagers</group>
            <group>BusinessDevelopmentUsers</group>
            <group>Facilities</group>
            <group>Services</group>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Memberships</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Membership</value>
        </filters>
        <label>Memberships</label>
        <sharedTo>
            <group>BusinessDevelopmentManagers</group>
            <group>BusinessDevelopmentUsers</group>
            <group>Facilities</group>
            <group>Services</group>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_needTraining_Allocation</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Alzheimer_s_Trading_Ltd_Opportunity</value>
        </filters>
        <filters>
            <field>Training_Allocated__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Opportunities need Training Allocation</label>
        <sharedTo>
            <group>AlzheimersTradingLtdOfficeGroup185171</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PendingDonations</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Pending Donations</label>
        <sharedTo>
            <group>BusinessDevelopmentManagers</group>
            <group>BusinessDevelopmentUsers</group>
            <group>Facilities</group>
            <group>Services</group>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Alzheimer_s_Trading_Ltd_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Alzheimer%27s Trading Ltd Sales Process</businessProcess>
        <description>E&amp;D Alzheimer&apos;s Trading Ltd Opportunity Record Type</description>
        <label>Alzheimer&apos;s Trading Ltd Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Donation</fullName>
        <active>true</active>
        <businessProcess>Donations</businessProcess>
        <description>Use this record type for standard donations</description>
        <label>Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grant</fullName>
        <active>true</active>
        <businessProcess>Grant</businessProcess>
        <description>Use this record type for grant applications</description>
        <label>Grant</label>
    </recordTypes>
    <recordTypes>
        <fullName>MajorGift</fullName>
        <active>true</active>
        <businessProcess>Major Gift</businessProcess>
        <description>Use this record type for major gift initiatives</description>
        <label>MajorGift</label>
    </recordTypes>
    <recordTypes>
        <fullName>MatchingDonation</fullName>
        <active>true</active>
        <businessProcess>Donations</businessProcess>
        <description>Use this record type for matching donations</description>
        <label>MatchingDonation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <businessProcess>Donations</businessProcess>
        <description>Use this record type for memberships</description>
        <label>Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>PledgePayment</fullName>
        <active>true</active>
        <businessProcess>Donations</businessProcess>
        <description>Use this record type for pledge payments on a pledge</description>
        <label>PledgePayment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Delivery_Date_on_Opportunity_Won</fullName>
        <active>true</active>
        <description>Delivery Date should be filled in, if the Opportunity Stage is Closed Won</description>
        <errorConditionFormula>ISBLANK( Delivery_Date__c ) &amp;&amp; ISPICKVAL(StageName ,&apos;Closed Won&apos;)</errorConditionFormula>
        <errorDisplayField>Delivery_Date__c</errorDisplayField>
        <errorMessage>Delivery Date should be filled in, if the Opportunity Stage is Closed Won</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_Name_Probability</fullName>
        <active>true</active>
        <description>Specific Stages on Opportunities must have specific Probabilities</description>
        <errorConditionFormula>NOT( $User.IgnoreValidationRules__c ) &amp;&amp; ((RecordType.Name = &quot;Alzheimer&apos;s Trading Ltd Opportunity&quot;) &amp;&amp;
( (ISPICKVAL( StageName , &quot;Sales Qualified Lead&quot;) &amp;&amp; Probability &lt;&gt; 0.10) ||
  (ISPICKVAL( StageName , &quot;Product discussion&quot;) &amp;&amp; Probability &lt;&gt; 0.20) || 
  (ISPICKVAL( StageName , &quot;Quote&quot;) &amp;&amp; Probability &lt;&gt; 0.50) ||
  (ISPICKVAL( StageName , &quot;Quote review&quot;) &amp;&amp; Probability &lt;&gt; 0.70) ||
  (ISPICKVAL( StageName , &quot;Final negotiations&quot;) &amp;&amp; Probability &lt;&gt; 0.90) ||
  (ISPICKVAL( StageName , &quot;Closed Won&quot;) &amp;&amp; Probability &lt;&gt; 1) ||
  (ISPICKVAL( StageName , &quot;Closed Lost&quot;) &amp;&amp; Probability &lt;&gt; 0.00)))</errorConditionFormula>
        <errorDisplayField>Probability</errorDisplayField>
        <errorMessage>Probability can&apos;t be changed from its default value</errorMessage>
    </validationRules>
</CustomObject>